# Development-of-a-Transaction-Based-System-for-T.I.P.-Recycle-and-Repair-Shop-Gui

./: CMakeLists.txt  README.md  dashboardwidget.cpp  dashboardwidget.h  database.cpp  database.h  loginwidget.cpp  loginwidget.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: unit_tests.cpp
